// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blank Magic Blocks 1`] = `
Object {
  "children": Array [],
  "type": "root",
}
`;

exports[`Blank Magic Blocks 2`] = `
Object {
  "children": Array [
    Object {
      "children": "",
      "depth": 2,
      "type": "heading",
    },
  ],
  "type": "root",
}
`;

exports[`Blank Magic Blocks 3`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "No Level",
        },
      ],
      "depth": 2,
      "type": "heading",
    },
  ],
  "type": "root",
}
`;

exports[`Parse Magic Blocks Callout Blocks 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Callout Title",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor sit amet, ",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "consectetur",
                },
              ],
              "type": "emphasis",
            },
            Object {
              "type": "text",
              "value": " adipiscing elit. Praesent nec massa tristique arcu fermentum dapibus. Integer orci turpis, mollis vel augue eget, placerat rhoncus orci. Mauris metus libero, rutrum",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "👍",
          "theme": "okay",
          "title": "Callout Title",
          "value": "Lorem ipsum dolor sit amet, _consectetur_ adipiscing elit. Praesent nec massa tristique arcu fermentum dapibus. Integer orci turpis, mollis vel augue eget, placerat rhoncus orci. Mauris metus libero, rutrum",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`Parse Magic Blocks Code Blocks 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "className": "tab-panel",
          "data": Object {
            "hName": "code",
            "hProperties": Object {
              "lang": "javascript",
              "meta": null,
            },
          },
          "lang": "javascript",
          "meta": null,
          "type": "code",
          "value": "$http.post('/someUrl', data).success(successCallback);

alert('test');",
        },
        Object {
          "className": "tab-panel",
          "data": Object {
            "hName": "code",
            "hProperties": Object {
              "lang": "text",
              "meta": "custom title",
            },
          },
          "lang": "text",
          "meta": "custom title",
          "type": "code",
          "value": "second tab",
        },
      ],
      "className": "tabs",
      "data": Object {
        "hName": "code-tabs",
      },
      "type": "code-tabs",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "className": "tab-panel",
              "data": Object {
                "hName": "code",
                "hProperties": Object {
                  "lang": "javascript",
                  "meta": null,
                },
              },
              "lang": "javascript",
              "meta": null,
              "type": "code",
              "value": "$http.post('/someUrl', data).success(successCallback);

alert('test');",
            },
          ],
          "className": "tabs",
          "data": Object {
            "hName": "code-tabs",
          },
          "type": "code-tabs",
        },
      ],
      "data": Object {
        "className": "pin",
        "hName": "rdme-pin",
      },
      "type": "rdme-pin",
    },
  ],
  "type": "root",
}
`;

exports[`Parse Magic Blocks Custom Callout Blocks 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Callout Title",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor sit amet...",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "✨",
          "theme": "custom_theme",
          "title": "Callout Title",
          "value": "Lorem ipsum dolor sit amet...",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`Parse Magic Blocks Custom HTML Block 1`] = `
Object {
  "children": Array [
    Object {
      "data": Object {
        "hName": "html-block",
        "hProperties": Object {
          "html": "<h1>👋🌍</h1>
<hr>
<form>
  <input name=\\"test\\" value=\\"hello\\" type=\\"text\\"/>
  <br/>
  <a class=\\"button\\">Go</a>
</form>",
        },
      },
      "type": "html-block",
    },
  ],
  "type": "root",
}
`;

exports[`Parse Magic Blocks Embed Blocks 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Embed",
            },
          ],
          "title": "@youtube",
          "type": "link",
          "url": "https://youtu.be/J3-uKv1DShQ",
        },
      ],
      "data": Object {
        "hName": "rdme-embed",
        "hProperties": Object {
          "height": undefined,
          "href": "https://youtu.be/J3-uKv1DShQ",
          "html": false,
          "iframe": false,
          "provider": "@youtube",
          "title": "Embed",
          "url": "https://youtu.be/J3-uKv1DShQ",
          "width": undefined,
        },
        "height": undefined,
        "html": false,
        "iframe": false,
        "json": Object {
          "favicon": "https://youtu.be/favicon.ico",
          "html": false,
          "iframe": false,
          "provider": "@youtube",
          "title": "Embed",
          "url": "https://youtu.be/J3-uKv1DShQ",
        },
        "provider": "@youtube",
        "title": "Embed",
        "url": "https://youtu.be/J3-uKv1DShQ",
        "width": undefined,
      },
      "type": "embed",
    },
  ],
  "type": "root",
}
`;

exports[`Parse Magic Blocks Heading Blocks 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "MagicBlock Conversion",
        },
      ],
      "depth": 2,
      "type": "heading",
    },
    Object {
      "lang": null,
      "meta": null,
      "type": "code",
      "value": "[block:api-header]
{}
[/block]",
    },
  ],
  "type": "root",
}
`;

exports[`Parse Magic Blocks Image Blocks 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "data": Object {
            "hProperties": Object {
              "className": "border",
              "width": "80%",
            },
          },
          "title": "White Center Blue BG.svg",
          "type": "image",
          "url": "https://files.readme.io/62083ee-White_Center_Blue_BG.svg",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Qui iusto fugiat doloremque? Facilis obcaecati vitae corrupti.",
                },
              ],
              "type": "paragraph",
            },
          ],
          "data": Object {
            "hName": "figcaption",
          },
          "type": "figcaption",
        },
      ],
      "data": Object {
        "hName": "figure",
      },
      "type": "figure",
      "url": "https://files.readme.io/62083ee-White_Center_Blue_BG.svg",
    },
  ],
  "type": "root",
}
`;

exports[`Parse Magic Blocks Table Blocks 1`] = `
Object {
  "children": Array [
    Object {
      "align": Array [
        "left",
        "left",
        "left",
      ],
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Left",
                },
              ],
              "type": "tableHead",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Center",
                },
              ],
              "type": "tableHead",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Right",
                },
              ],
              "type": "tableHead",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "L0",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "bold",
                    },
                  ],
                  "type": "emphasis",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "$1600",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "L1",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "inlineCode",
                  "value": "code",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "$12",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "L2",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "italic",
                    },
                  ],
                  "type": "emphasis",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "$1",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "root",
}
`;

exports[`Parse Magic Blocks Unrecognized Blocks 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "data": Object {
        "body": "Lorem ipsum dolor sit amet, _consectetur_ adipiscing elit. Praesent nec massa tristique arcu fermentum dapibus. Integer orci turpis, mollis vel augue eget, placerat rhoncus orci. Mauris metus libero, rutrum",
        "color": "#f00",
        "title": "Title",
      },
      "type": "div",
    },
  ],
  "type": "root",
}
`;

exports[`Sanitize Schema 1`] = `
Object {
  "attributes": Array [],
}
`;
